# physical-ai-evals

./: .gitignore  404.html  BACKLOG.md  NOTES.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish-package.yml
BLOG_POST/: index.html
EVAL_PATTERNS/: index.html
FRICTION_LOG/: index.html
FRICTION_POINTS/: index.html
docs/: BLOG_OUTLINE.md  BLOG_POST.md  EVAL_PATTERNS.md  FRICTION_LOG.md  FRICTION_POINTS.md  index.md
harness/: __init__.py  _modal.py  cli.py  config.py  schema.py  writer.py
harness/_vendor/: __init__.py
harness/_vendor/daft_datasets/: __init__.py
harness/ingest/: __init__.py  abc.py  abc_query.py  aloha.py  base.py  droid.py  egodex.py  hdf5.py  lerobot.py
harness/policies/: __init__.py  openvla.py  vla_jepa.py
harness/rollout/: __init__.py  libero_runner.py  modal_app.py  modal_vla_jepa_app.py  policy.py  rollout_udf.py
notebooks/: README.md  failure_modes.ipynb  failure_modes.py  regrasp_demo.py
search/: search_index.json
tests/: test_daft_ingest.py  test_extra_datasets_ingest.py  test_hdf5_ingest.py  test_policies.py  test_rollout.py  test_schema.py
