[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vla_jepa_harness"
version = "0.1.0"
description = "Reproducible VLA rollouts -> parquet for failure-mode mining with Daft (VLA-JEPA vs OpenVLA on LIBERO)."
readme = "README.md"
# Core runs on 3.10–3.13. The canonical interpreter everywhere (dev + both GPU images) is
# 3.12; the vla_jepa extra REQUIRES >=3.12 (lerobot). The old "LIBERO needs 3.8" is a myth.
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Eventual" }]

# Core deps = the lightweight contract layer (schema/writer/ingest-base/notebook read).
# Everything heavy (policies, sim, dataset readers) is an OPTIONAL extra so the harness
# imports and the smoke test run on a plain CPU box / CI without GPU stacks.
dependencies = [
  "pyarrow>=15",       # the schema IS a pyarrow schema; nightly daft needs modern pyarrow (24.x)
  "numpy>=1.24,<2.0",  # 2.0 churns dtypes; the VLA-JEPA Modal image (lerobot) runs numpy 2 separately
  # Floor = latest PyPI release. daft.datasets.{lerobot} + Hdf5File are nightly-only until the
  # next release — dev installs use:  pip install daft --pre --extra-index-url https://nightly.daft.ai
  "daft>=0.7.16",
  "scikit-learn>=1.4", # KMeans/HDBSCAN for the failure-mode clustering (Daft has NO built-in)
  "imageio[ffmpeg]>=2.34",  # mp4 rollout video capture (imageio.mimwrite)
]

[project.optional-dependencies]
# --- the comparative notebook's embedding pass ---
embed = [
  "sentence-transformers>=3.0",  # text/image embeddings via daft.functions.ai.embed_*
]
# --- LIBERO simulation. The "needs Python 3.8" lore is a MYTH (LIBERO's setup.py installs
#     nothing) — VERIFIED on Modal at Python 3.12 in both GPU images. The wheel path
#     (hf-libero, linux) ships LIBERO's code + bddl/assets/init_states; the clone path with
#     the verified pin set lives in harness/rollout/modal_app.py (the source of truth). ---
libero = [
  "hf-libero>=0.1.4; sys_platform == 'linux'",
]
# --- OpenVLA baseline. Its transformers pin is load-bearing and CONFLICTS with VLA-JEPA;
#     run OpenVLA in its OWN venv. ---
openvla = [
  "torch==2.2.0",
  "transformers==4.40.1",  # NEWER transformers SILENTLY breaks remote predict_action
  "tokenizers==0.19.1",
  "timm==0.9.10",
  "accelerate>=0.25.0",
  "pillow>=10.0",          # OpenVLA processor builds PIL.Image from the frame
  # flash-attn==2.5.5 is documented but install AFTER the editable install, and NOT on
  # Apple Silicon/CPU (use attn_implementation='sdpa'/'eager' there).
]
# --- VLA-JEPA headliner. The public repo uses StarVLA + a WebSocket policy server,
#     not LeRobot's PreTrainedPolicy factory. Install github.com/ginwind/VLA-JEPA
#     separately for the model server; this extra covers the lightweight client-side deps.
# --- VLA-JEPA runs IN-PROCESS via the lerobot port (policies/vla_jepa merged on lerobot main
#     2026-06; pinned at a git SHA until the next lerobot release). Requires Python >=3.12 and
#     pulls the Qwen3-VL / transformers 5.4-5.6 stack -> its OWN env/image, separate from
#     OpenVLA's 4.40.1 (see NOTES.md and harness/rollout/modal_vla_jepa_app.py). ---
vla_jepa = [
  "lerobot[vla_jepa] @ git+https://github.com/huggingface/lerobot@052d329470ea8d5c98a4b4bd1f6c18abd0ac7c34",
]
# --- dataset ingest. Strategy (NOTES.md): DROID/LeRobot delegate to Daft-native readers
#     (PRs #7089/#7090); we OWN HDF5. NO TensorFlow anywhere — Daft has none either, and we
#     parse raw-DROID's per-episode trajectory.h5 with our own HDF5 reader, not RLDS/tfds.
ingest_hdf5 = ["h5py>=3.10"]                              # robomimic/LIBERO demos + raw-DROID trajectory.h5
ingest_droid = ["h5py>=3.10", "daft[video]", "pillow"]   # daft.datasets.droid.raw() (raw DROID) + h5py for trajectory.h5
ingest_lerobot = ["daft[video,huggingface]", "pillow"]   # daft.datasets.lerobot (v3.0); add "lerobot>=0.5.0" ONLY for the v2.1 fallback
ingest_aloha = ["h5py>=3.10"]                             # ALOHA / Mobile ALOHA ACT-style HDF5 episodes
ingest_egodex = ["h5py>=3.10"]                            # EgoDex HDF5 annotations; MP4 paths are referenced, not decoded
ingest_abc = []                                           # ABC exported states_actions.bin episodes; raw MCAP conversion stays upstream
# NOTE: daft.datasets.{droid,lerobot} arrive when #7089/#7090 land in a Daft release; our
# pinned daft==0.7.15 does not ship them yet (the extras above name the runtime deps, not the API).
modal = ["modal>=0.64"]   # `modal run harness/rollout/modal_app.py ...` (deployment only)
dev = ["pytest>=8.0"]

[project.scripts]
harness = "harness.cli:main"   # `harness rollout ...` / `harness ingest ...`

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]  # py:percent notebooks tolerate looser style

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # pytest.importorskip legitimately precedes imports

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
  "E501",  # long lines in docstrings/comments carry receipts; format handles code lines
  "E712",  # `success == False` is a Daft expression idiom, not a bool comparison
]

[tool.ty.rules]
# Heavy deps (libero/lerobot/transformers/robosuite/modal) are LAZY optional imports by
# design -- absent from the dev env. Warn, don't fail; real typos still surface in review.
unresolved-import = "warn"
